--- a/muskanPortfolio.html
+++ b/muskanPortfolio.html
@@ -136,7 +136,7 @@
           <button class="nav-button prev" onclick="prevImage('project1')">
             &#10094;
           </button>
-          <img id="img-project1" src="images/sog_1.PNG" alt="Project 1" />
+          <img id="img-project1" src="sog_1.PNG" alt="Project 1" />
           <button class="nav-button next" onclick="nextImage('project1')">
             &#10095;
           </button>
@@ -147,7 +147,7 @@
           <button class="nav-button prev" onclick="prevImage('project2')">
             &#10094;
           </button>
-          <img id="img-project2" src="images/se_1.PNG" alt="Project 2" />
+          <img id="img-project2" src="se_1.PNG" alt="Project 2" />
           <button class="nav-button next" onclick="nextImage('project2')">
             &#10095;
           </button>
@@ -158,7 +158,7 @@
           <button class="nav-button prev" onclick="prevImage('project3')">
             &#10094;
           </button>
-          <img id="img-project3" src="images/mm_1.PNG" alt="Project 3" />
+          <img id="img-project3" src="mm_1.PNG" alt="Project 3" />
           <button class="nav-button next" onclick="nextImage('project3')">
             &#10095;
           </button>
@@ -188,24 +188,24 @@
     <script>
       const images = {
         project1: [
-          "images/sog_1.PNG",
-          "images/sog_2.PNG",
-          "images/sog_3.PNG",
-          "images/sog_4.PNG",
-          "images/sog_5.PNG",
+          "sog_1.PNG",
+          "sog_2.PNG",
+          "sog_3.PNG",
+          "sog_4.PNG",
+          "sog_5.PNG",
         ],
         project2: [
-          "images/se_1.PNG",
-          "images/se_2.PNG",
-          "images/se_3.PNG",
-          "images/se_4.PNG",
+          "se_1.PNG",
+          "se_2.PNG",
+          "se_3.PNG",
+          "se_4.PNG",
         ],
         project3: [
-          "images/mm_1.PNG",
-          "images/mm_2.PNG",
-          "images/mm_3.PNG",
-          "images/mm_4.PNG",
-          "images/mm_5.PNG",
+          "mm_1.PNG",
+          "mm_2.PNG",
+          "mm_3.PNG",
+          "mm_4.PNG",
+          "mm_5.PNG",
         ],
       };
 
